fix: OpenAPIにおけるresponsesに定義を移行
